# sqli-recon

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
infra_map/: __init__.py  __main__.py  cli.py  config.py  graph.py  mapper.py  output.py  probe.py  sources.py
sqli_recon/: __init__.py  __main__.py  auth.py  captcha_solver.py  checkpoint.py  classifier.py  cli.py  crawler.py  gather.py  headless.py  http_client.py  intelligence.py  js_analyzer.py  models.py  output.py  param_finder.py  passive.py  report.py  sanitizer.py  wordlists.py
tests/: test_sites.py  test_suite.py  vulnerable_app.py  waf.py
tests/tor_data/: torrc
